--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.coreos</groupId>
+      <artifactId>appc</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.spotify</groupId>
       <artifactId>docker-client</artifactId>
       <version>2.7.6</version>
